--- a/NASAPictureOfTheDay/Base.lproj/Main.storyboard
+++ b/NASAPictureOfTheDay/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OjD-EZ-Jua">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                         <subviews>
-                                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="b3l-fG-KMR">
+                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="b3l-fG-KMR">
                                                 <rect key="frame" x="197" y="438" width="20" height="20"/>
                                             </activityIndicatorView>
                                             <searchBar contentMode="redraw" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" searchBarStyle="minimal" placeholder="Pick the date" translatesAutoresizingMaskIntoConstraints="NO" id="9fR-Sl-hx5">
