--- a/NASAPictureOfTheDay/Supporting files/Base.lproj/Main.storyboard
+++ b/NASAPictureOfTheDay/Supporting files/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                                     </imageView>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="997" verticalCompressionResistancePriority="997" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="085-nW-GTX">
+                                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="085-nW-GTX">
                                                 <rect key="frame" x="12" y="417.5" width="390" height="49.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YY5-w2-HXP">
@@ -63,7 +63,7 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="998" verticalCompressionResistancePriority="998" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gM9-PM-cgZ">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gM9-PM-cgZ">
                                                         <rect key="frame" x="0.0" y="35" width="390" height="14.5"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                         <nil key="textColor"/>
@@ -72,7 +72,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oi4-ph-K1K">
-                                                <rect key="frame" x="12" y="477" width="390" height="13.5"/>
+                                                <rect key="frame" x="12" y="477" width="390" height="399"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -91,7 +91,7 @@
                                             <constraint firstAttribute="trailing" secondItem="Oi4-ph-K1K" secondAttribute="trailing" constant="12" id="Vw1-xN-Bu1"/>
                                             <constraint firstItem="b3l-fG-KMR" firstAttribute="centerX" secondItem="OjD-EZ-Jua" secondAttribute="centerX" id="a8R-dj-bEj"/>
                                             <constraint firstItem="b3l-fG-KMR" firstAttribute="centerY" secondItem="OjD-EZ-Jua" secondAttribute="centerY" id="ah1-Ty-2MD"/>
-                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Oi4-ph-K1K" secondAttribute="bottom" constant="20" id="bPF-FE-5a3"/>
+                                            <constraint firstAttribute="bottom" secondItem="Oi4-ph-K1K" secondAttribute="bottom" constant="20" id="bPF-FE-5a3"/>
                                             <constraint firstItem="9fR-Sl-hx5" firstAttribute="leading" secondItem="OjD-EZ-Jua" secondAttribute="leading" id="fZI-5g-0Gq"/>
                                             <constraint firstItem="9ZG-mb-TOL" firstAttribute="top" secondItem="kai-7i-lbU" secondAttribute="bottom" constant="10" id="fzd-XP-XZK"/>
                                             <constraint firstItem="Oi4-ph-K1K" firstAttribute="leading" secondItem="OjD-EZ-Jua" secondAttribute="leading" constant="12" id="g5v-hG-BhM"/>
